# txt-to-anki

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  pyproject.toml
.github/: issue-template-task-6.md
.github/workflows/: ci.yml
.kiro/specs/japanese-tokenizer/: design.md  requirements.md  tasks.md
.kiro/steering/: github-workflow.md  task-workflow.md  tech-stack.md
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  milestones.md  specification.md  usage.rst
resources/: お隣遊び - ぺんたごん.txt
src/txt_to_anki/: __init__.py  cli.py
src/txt_to_anki/tokenizer/: __init__.py  exceptions.py  japanese_tokenizer.py  token_models.py
src/txt_to_anki/tokenizer/filters/: __init__.py  particle_filter.py  pos_filters.py  protocol.py  punctuation_filter.py
tests/: __init__.py  test_cli.py  test_tokenizer.py
